Classifier evaluated for better performance

--- a/DiabetesPredictionSystem.ipynb
+++ b/DiabetesPredictionSystem.ipynb
@@ -316,12 +316,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score for training data = 0.780040733197556\n",
+      "Accuracy score for testing data = 0.7560975609756098\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate how best the model can predict \n",
+    "y_train_prediction = classifier.predict(X_train)\n",
+    "y_test_prediction = classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluate with accuracy score \n",
+    "accur_score_train = accuracy_score(y_train, y_train_prediction)\n",
+    "print(f\"Accuracy score for training data = {accur_score_train}\")\n",
+    "\n",
+    "accur_score_test = accuracy_score(y_test, y_test_prediction)\n",
+    "print(f\"Accuracy score for testing data = {accur_score_test}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# "
-   ]
+   "source": []
   }
  ],
  "metadata": {
