Folder for diabetes classification project

--- a/DiabetesPredSystem/DiabetesPredictionSystem.ipynb
+++ b/DiabetesPredSystem/DiabetesPredictionSystem.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,21 @@
      "output_type": "stream",
      "text": [
       "Accuracy score for training data = 0.780040733197556\n",
-      "Accuracy score for testing data = 0.7560975609756098\n"
+      "Accuracy score for testing data = 0.7560975609756098\n",
+      "[1 1 1 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 1 0 0 1 0 1 1\n",
+      " 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 1 0 0 1\n",
+      " 1 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 1 1 0 0 1 0 0 0 1 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1 1 0 1 0 0 0 0 0 1 0 0 1\n",
+      " 0 0 0 1 1 0 1 1 1 0 0 0 0 0 1 0 1 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 1 1 1 0 0 0 1 1 0 1 0 1 0 1 0 1 0 1 0 0 0 0 0 1 0 0 0 0 1 1 0 0 1 0 1 0 0\n",
+      " 1 1 1 0 0 0 1 0 0 0 1 0 0 1 0 0 0 0 1 1 0 0 0 0 0 0 0 0 1 0 0 0 0 1 1 0 0\n",
+      " 0 0 0 1 1 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 1 0 0 1 0 0 0 1 1 0 1 0 1 0 0 1\n",
+      " 1 0 1 0 0 0 0 1 0 0 1 0 1 1 0 1 0 0 0 1 0 1 1 0 0 0 0 0 0 0 0 1 0 0 0 0 0\n",
+      " 1 1 1 1 0 1 0 0 0 0 0 0 0 0 1 1 0 1 0 0 1 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 1\n",
+      " 1 0 1 0 1 0 1 0 0 1 0 0 1 0 0 1 0 0 0 1 0 0 0 0 1 0 0 1 0 0 1 0 0 1 0 0 0\n",
+      " 0 1 0 1 0 0 1 0 0 0 0 0 0 0 1 1 1 0 0 0 1 1 0 0 0 0 1 0 0 1 0 1 0 0 0 1 0\n",
+      " 0 0 0 0 1 0 0 0 0 1 1 1 1 1 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 1 0 0 0 0 0 0 0 1]\n"
      ]
     }
    ],
@@ -338,7 +352,40 @@
     "print(f\"Accuracy score for training data = {accur_score_train}\")\n",
     "\n",
     "accur_score_test = accuracy_score(y_test, y_test_prediction)\n",
-    "print(f\"Accuracy score for testing data = {accur_score_test}\")"
+    "print(f\"Accuracy score for testing data = {accur_score_test}\")\n",
+    "print(y_train_prediction)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Taking an input data for prediction from the users \n",
+    "input_data = (4,110,92,0,0,37.6,0.191,30)\n",
+    "\n",
+    "# Convert the input data as np array\n",
+    "input_data_array = np.asarray(input_data)\n",
+    "\n",
+    "# Reshape the data since we are only predicting for a single instance\n",
+    "reshaped_input_data = input_data_array.reshape(1, -1)\n",
+    "\n",
+    "# transform data into std data\n",
+    "std_data = scaler.transform(reshaped_input_data)\n",
+    "\n",
+    "# Now make the prediction\n",
+    "prediction_outcome = classifier.predict(std_data)\n",
+    "\n",
+    "print(prediction_outcome)"
    ]
   },
   {
